src/bindings_linux_armv6.rs

#[test]
fn bindgen_test_layout__SECURITY_ATTRIBUTES() {
    assert_eq!(
        ::std::mem::size_of::<_SECURITY_ATTRIBUTES>(),
        12usize,
        concat!("Size of: ", stringify!(_SECURITY_ATTRIBUTES))
    );
    assert_eq!(
        ::std::mem::align_of::<_SECURITY_ATTRIBUTES>(),
        4usize,
        concat!("Alignment of ", stringify!(_SECURITY_ATTRIBUTES))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_SECURITY_ATTRIBUTES>())).nLength as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_SECURITY_ATTRIBUTES),
            "::",
            stringify!(nLength)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_SECURITY_ATTRIBUTES>())).lpSecurityDescriptor as *const _
                as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(_SECURITY_ATTRIBUTES),
            "::",
            stringify!(lpSecurityDescriptor)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_SECURITY_ATTRIBUTES>())).bInheritHandle as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_SECURITY_ATTRIBUTES),
            "::",
            stringify!(bInheritHandle)
        )
    );
}
impl Default for _SECURITY_ATTRIBUTES {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
pub type LPSECURITY_ATTRIBUTES = *mut _SECURITY_ATTRIBUTES;
pub type FT_HANDLE = PVOID;
pub type FT_STATUS = ULONG;
pub const FT_OK: ::std::os::raw::c_uint = 0;
pub const FT_INVALID_HANDLE: ::std::os::raw::c_uint = 1;
pub const FT_DEVICE_NOT_FOUND: ::std::os::raw::c_uint = 2;
pub const FT_DEVICE_NOT_OPENED: ::std::os::raw::c_uint = 3;
pub const FT_IO_ERROR: ::std::os::raw::c_uint = 4;
pub const FT_INSUFFICIENT_RESOURCES: ::std::os::raw::c_uint = 5;
pub const FT_INVALID_PARAMETER: ::std::os::raw::c_uint = 6;
pub const FT_INVALID_BAUD_RATE: ::std::os::raw::c_uint = 7;
pub const FT_DEVICE_NOT_OPENED_FOR_ERASE: ::std::os::raw::c_uint = 8;
pub const FT_DEVICE_NOT_OPENED_FOR_WRITE: ::std::os::raw::c_uint = 9;
pub const FT_FAILED_TO_WRITE_DEVICE: ::std::os::raw::c_uint = 10;
pub const FT_EEPROM_READ_FAILED: ::std::os::raw::c_uint = 11;
pub const FT_EEPROM_WRITE_FAILED: ::std::os::raw::c_uint = 12;
pub const FT_EEPROM_ERASE_FAILED: ::std::os::raw::c_uint = 13;
pub const FT_EEPROM_NOT_PRESENT: ::std::os::raw::c_uint = 14;
pub const FT_EEPROM_NOT_PROGRAMMED: ::std::os::raw::c_uint = 15;
pub const FT_INVALID_ARGS: ::std::os::raw::c_uint = 16;
pub const FT_NOT_SUPPORTED: ::std::os::raw::c_uint = 17;
pub const FT_OTHER_ERROR: ::std::os::raw::c_uint = 18;
pub const FT_DEVICE_LIST_NOT_READY: ::std::os::raw::c_uint = 19;
pub type _bindgen_ty_11 = ::std::os::raw::c_uint;
pub type FT_DEVICE = ULONG;
pub const FT_DEVICE_BM: ::std::os::raw::c_uint = 0;
pub const FT_DEVICE_AM: ::std::os::raw::c_uint = 1;
pub const FT_DEVICE_100AX: ::std::os::raw::c_uint = 2;
pub const FT_DEVICE_UNKNOWN: ::std::os::raw::c_uint = 3;
pub const FT_DEVICE_2232C: ::std::os::raw::c_uint = 4;
pub const FT_DEVICE_232R: ::std::os::raw::c_uint = 5;
pub const FT_DEVICE_2232H: ::std::os::raw::c_uint = 6;
pub const FT_DEVICE_4232H: ::std::os::raw::c_uint = 7;
pub const FT_DEVICE_232H: ::std::os::raw::c_uint = 8;
pub const FT_DEVICE_X_SERIES: ::std::os::raw::c_uint = 9;
pub const FT_DEVICE_4222H_0: ::std::os::raw::c_uint = 10;
pub const FT_DEVICE_4222H_1_2: ::std::os::raw::c_uint = 11;
pub const FT_DEVICE_4222H_3: ::std::os::raw::c_uint = 12;
pub const FT_DEVICE_4222_PROG: ::std::os::raw::c_uint = 13;
pub const FT_DEVICE_900: ::std::os::raw::c_uint = 14;
pub const FT_DEVICE_930: ::std::os::raw::c_uint = 15;
pub const FT_DEVICE_UMFTPD3A: ::std::os::raw::c_uint = 16;
pub type _bindgen_ty_12 = ::std::os::raw::c_uint;
extern "C" {
    pub fn FT_Open(deviceNumber: ::std::os::raw::c_int, pHandle: *mut FT_HANDLE) -> FT_STATUS;
}
extern "C" {
    pub fn FT_OpenEx(pArg1: PVOID, Flags: DWORD, pHandle: *mut FT_HANDLE) -> FT_STATUS;
}
extern "C" {
    pub fn FT_ListDevices(pArg1: PVOID, pArg2: PVOID, Flags: DWORD) -> FT_STATUS;
}
extern "C" {
    pub fn FT_Close(ftHandle: FT_HANDLE) -> FT_STATUS;
}
extern "C" {
    pub fn FT_Read(
        ftHandle: FT_HANDLE,
        lpBuffer: LPVOID,
        dwBytesToRead: DWORD,
        lpBytesReturned: LPDWORD,
    ) -> FT_STATUS;
}
extern "C" {
    pub fn FT_Write(
        ftHandle: FT_HANDLE,
        lpBuffer: LPVOID,
        dwBytesToWrite: DWORD,
        lpBytesWritten: LPDWORD,
    ) -> FT_STATUS;
}
extern "C" {
    pub fn FT_IoCtl(
        ftHandle: FT_HANDLE,
        dwIoControlCode: DWORD,
        lpInBuf: LPVOID,
        nInBufSize: DWORD,
        lpOutBuf: LPVOID,
        nOutBufSize: DWORD,
        lpBytesReturned: LPDWORD,
        lpOverlapped: LPOVERLAPPED,
    ) -> FT_STATUS;
}
extern "C" {
    pub fn FT_SetBaudRate(ftHandle: FT_HANDLE, BaudRate: ULONG) -> FT_STATUS;
}
extern "C" {
    pub fn FT_SetDivisor(ftHandle: FT_HANDLE, Divisor: USHORT) -> FT_STATUS;
}
extern "C" {
    pub fn FT_SetDataCharacteristics(
        ftHandle: FT_HANDLE,
        WordLength: UCHAR,
        StopBits: UCHAR,
        Parity: UCHAR,
    ) -> FT_STATUS;
}
extern "C" {
    pub fn FT_SetFlowControl(
        ftHandle: FT_HANDLE,
        FlowControl: USHORT,
        XonChar: UCHAR,
        XoffChar: UCHAR,
    ) -> FT_STATUS;
}
extern "C" {
    pub fn FT_ResetDevice(ftHandle: FT_HANDLE) -> FT_STATUS;
}
extern "C" {
    pub fn FT_SetDtr(ftHandle: FT_HANDLE) -> FT_STATUS;
}
extern "C" {
    pub fn FT_ClrDtr(ftHandle: FT_HANDLE) -> FT_STATUS;
}
extern "C" {
    pub fn FT_SetRts(ftHandle: FT_HANDLE) -> FT_STATUS;
}
extern "C" {
    pub fn FT_ClrRts(ftHandle: FT_HANDLE) -> FT_STATUS;
}
extern "C" {
    pub fn FT_GetModemStatus(ftHandle: FT_HANDLE, pModemStatus: *mut ULONG) -> FT_STATUS;
}
extern "C" {
    pub fn FT_SetChars(
        ftHandle: FT_HANDLE,
        EventChar: UCHAR,
        EventCharEnabled: UCHAR,
        ErrorChar: UCHAR,
        ErrorCharEnabled: UCHAR,
    ) -> FT_STATUS;
}
extern "C" {
    pub fn FT_Purge(ftHandle: FT_HANDLE, Mask: ULONG) -> FT_STATUS;
}
extern "C" {
    pub fn FT_SetTimeouts(
        ftHandle: FT_HANDLE,
        ReadTimeout: ULONG,
        WriteTimeout: ULONG,
    ) -> FT_STATUS;
}
extern "C" {
    pub fn FT_GetQueueStatus(ftHandle: FT_HANDLE, dwRxBytes: *mut DWORD) -> FT_STATUS;
}
extern "C" {
    pub fn FT_SetEventNotification(ftHandle: FT_HANDLE, Mask: DWORD, Param: PVOID) -> FT_STATUS;
}
extern "C" {
    pub fn FT_GetStatus(
        ftHandle: FT_HANDLE,
        dwRxBytes: *mut DWORD,
        dwTxBytes: *mut DWORD,
        dwEventDWord: *mut DWORD,
    ) -> FT_STATUS;
}
extern "C" {
    pub fn FT_SetBreakOn(ftHandle: FT_HANDLE) -> FT_STATUS;
}
extern "C" {
    pub fn FT_SetBreakOff(ftHandle: FT_HANDLE) -> FT_STATUS;
}
extern "C" {
    pub fn FT_SetWaitMask(ftHandle: FT_HANDLE, Mask: DWORD) -> FT_STATUS;
}
extern "C" {
    pub fn FT_WaitOnMask(ftHandle: FT_HANDLE, Mask: *mut DWORD) -> FT_STATUS;
}
extern "C" {
    pub fn FT_GetEventStatus(ftHandle: FT_HANDLE, dwEventDWord: *mut DWORD) -> FT_STATUS;
}
extern "C" {
    pub fn FT_ReadEE(ftHandle: FT_HANDLE, dwWordOffset: DWORD, lpwValue: LPWORD) -> FT_STATUS;
}
extern "C" {
    pub fn FT_WriteEE(ftHandle: FT_HANDLE, dwWordOffset: DWORD, wValue: WORD) -> FT_STATUS;
}
extern "C" {
    pub fn FT_EraseEE(ftHandle: FT_HANDLE) -> FT_STATUS;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ft_program_data {
    pub Signature1: DWORD,
    pub Signature2: DWORD,
    pub Version: DWORD,
    pub VendorId: WORD,
    pub ProductId: WORD,
    pub Manufacturer: *mut ::std::os::raw::c_char,
    pub ManufacturerId: *mut ::std::os::raw::c_char,
    pub Description: *mut ::std::os::raw::c_char,
    pub SerialNumber: *mut ::std::os::raw::c_char,
    pub MaxPower: WORD,
    pub PnP: WORD,
    pub SelfPowered: WORD,
    pub RemoteWakeup: WORD,
    pub Rev4: UCHAR,
    pub IsoIn: UCHAR,
    pub IsoOut: UCHAR,
    pub PullDownEnable: UCHAR,
    pub SerNumEnable: UCHAR,
    pub USBVersionEnable: UCHAR,
    pub USBVersion: WORD,
    pub Rev5: UCHAR,
    pub IsoInA: UCHAR,
    pub IsoInB: UCHAR,
    pub IsoOutA: UCHAR,
    pub IsoOutB: UCHAR,
    pub PullDownEnable5: UCHAR,
    pub SerNumEnable5: UCHAR,
    pub USBVersionEnable5: UCHAR,
    pub USBVersion5: WORD,
    pub AIsHighCurrent: UCHAR,
    pub BIsHighCurrent: UCHAR,
    pub IFAIsFifo: UCHAR,
    pub IFAIsFifoTar: UCHAR,
    pub IFAIsFastSer: UCHAR,
    pub AIsVCP: UCHAR,
    pub IFBIsFifo: UCHAR,
    pub IFBIsFifoTar: UCHAR,
    pub IFBIsFastSer: UCHAR,
    pub BIsVCP: UCHAR,
    pub UseExtOsc: UCHAR,
    pub HighDriveIOs: UCHAR,
    pub EndpointSize: UCHAR,
    pub PullDownEnableR: UCHAR,
    pub SerNumEnableR: UCHAR,
    pub InvertTXD: UCHAR,
    pub InvertRXD: UCHAR,
    pub InvertRTS: UCHAR,
    pub InvertCTS: UCHAR,
    pub InvertDTR: UCHAR,
    pub InvertDSR: UCHAR,
    pub InvertDCD: UCHAR,
    pub InvertRI: UCHAR,
    pub Cbus0: UCHAR,
    pub Cbus1: UCHAR,
    pub Cbus2: UCHAR,
    pub Cbus3: UCHAR,
    pub Cbus4: UCHAR,
    pub RIsD2XX: UCHAR,
    pub PullDownEnable7: UCHAR,
    pub SerNumEnable7: UCHAR,
    pub ALSlowSlew: UCHAR,
    pub ALSchmittInput: UCHAR,
    pub ALDriveCurrent: UCHAR,
    pub AHSlowSlew: UCHAR,
    pub AHSchmittInput: UCHAR,
    pub AHDriveCurrent: UCHAR,
    pub BLSlowSlew: UCHAR,
    pub BLSchmittInput: UCHAR,
    pub BLDriveCurrent: UCHAR,
    pub BHSlowSlew: UCHAR,
    pub BHSchmittInput: UCHAR,
    pub BHDriveCurrent: UCHAR,
    pub IFAIsFifo7: UCHAR,
    pub IFAIsFifoTar7: UCHAR,
    pub IFAIsFastSer7: UCHAR,
    pub AIsVCP7: UCHAR,
    pub IFBIsFifo7: UCHAR,
    pub IFBIsFifoTar7: UCHAR,
    pub IFBIsFastSer7: UCHAR,
    pub BIsVCP7: UCHAR,
    pub PowerSaveEnable: UCHAR,
    pub PullDownEnable8: UCHAR,
    pub SerNumEnable8: UCHAR,
    pub ASlowSlew: UCHAR,
    pub ASchmittInput: UCHAR,
    pub ADriveCurrent: UCHAR,
    pub BSlowSlew: UCHAR,
    pub BSchmittInput: UCHAR,
    pub BDriveCurrent: UCHAR,
    pub CSlowSlew: UCHAR,
    pub CSchmittInput: UCHAR,
    pub CDriveCurrent: UCHAR,
    pub DSlowSlew: UCHAR,
    pub DSchmittInput: UCHAR,
    pub DDriveCurrent: UCHAR,
    pub ARIIsTXDEN: UCHAR,
    pub BRIIsTXDEN: UCHAR,
    pub CRIIsTXDEN: UCHAR,
    pub DRIIsTXDEN: UCHAR,
    pub AIsVCP8: UCHAR,
    pub BIsVCP8: UCHAR,
    pub CIsVCP8: UCHAR,
    pub DIsVCP8: UCHAR,
    pub PullDownEnableH: UCHAR,
    pub SerNumEnableH: UCHAR,
    pub ACSlowSlewH: UCHAR,
    pub ACSchmittInputH: UCHAR,
    pub ACDriveCurrentH: UCHAR,
    pub ADSlowSlewH: UCHAR,
    pub ADSchmittInputH: UCHAR,
    pub ADDriveCurrentH: UCHAR,
    pub Cbus0H: UCHAR,
    pub Cbus1H: UCHAR,
    pub Cbus2H: UCHAR,
    pub Cbus3H: UCHAR,
    pub Cbus4H: UCHAR,
    pub Cbus5H: UCHAR,
    pub Cbus6H: UCHAR,
    pub Cbus7H: UCHAR,
    pub Cbus8H: UCHAR,
    pub Cbus9H: UCHAR,
    pub IsFifoH: UCHAR,
    pub IsFifoTarH: UCHAR,
    pub IsFastSerH: UCHAR,
    pub IsFT1248H: UCHAR,
    pub FT1248CpolH: UCHAR,
    pub FT1248LsbH: UCHAR,
    pub FT1248FlowControlH: UCHAR,
    pub IsVCPH: UCHAR,
    pub PowerSaveEnableH: UCHAR,
}
